Add XLS import admin endpoint
